crates/lang/macro/tests/ui/fail/M-01-missing-message.rs
use ink_lang as ink;

#[ink::contract]
mod missing_message {
    #[ink(storage)]
    pub struct MissingMessage {}

    impl MissingMessage {
        #[ink(constructor)]
        pub fn constructor() -> Self {
            Self {}
        }
    }
}

fn main() {}
